# grlb-esp32-cnc-yaz-l-m-

./: CMakeLists.txt  CNC_Controller.pro  Makefile  Makefile.Debug  Makefile.Release  README.md  test_sample.gcode
include/: axiscontroller.h  gcodeparser.h  logger.h  mainwindow.h  openglwidget.h  plugininterface.h  serialcommunication.h  settings.h  toolpathvisualizer.h
src/: axiscontroller.cpp  gcodeparser.cpp  logger.cpp  main.cpp  mainwindow.cpp  openglwidget.cpp  serialcommunication.cpp  settings.cpp
